--- a/Task_01_HTML_CSS/grid vs flex/grid/grid.html
+++ b/Task_01_HTML_CSS/grid vs flex/grid/grid.html
@@ -21,11 +21,11 @@
             <h1 class="card-title">Карточка 3</h1>
             <p>Содержимое карточки 3</p>
         </div>
-        <div class="card">
+        <div class="card card-4">
             <h1 class="card-title">Карточка 4</h1>
             <p>Содержимое карточки 4</p>
         </div>
-        <div class="card">
+        <div class="card card-5">
             <h1 class="card-title">Карточка 5</h1>
             <p>Содержимое карточки 5</p>
         </div>
