Task_01 bem/scss is done

--- a/Task_01_HTML_CSS/buttonup/buttonup.html
+++ b/Task_01_HTML_CSS/buttonup/buttonup.html
@@ -121,7 +121,7 @@
     </article>
     <a href="#body">
         <button class="upBtn">
-            <img src="../assets/images/arrow_up.png" alt="наверх" class="arrow"/>
+            <img src="../assets/icons/arrow_up.png" alt="наверх" class="arrow"/>
         </button>
     </a>
 </body>
