Update Task_01 grid vs flex

--- a/Task_01_HTML_CSS/grid vs flex/flex/flex.html
+++ b/Task_01_HTML_CSS/grid vs flex/flex/flex.html
@@ -7,30 +7,29 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <article class="card-container">
-        <div class="card-row">
-        <div class="card">
-            <h1 class="card-title">Карточка 1</h1>
-            <p>Содержимое карточки 1</p>
-        </div>
-        <div class="card">
-            <h1 class="card-title">Карточка 2</h1>
-            <p>Содержимое карточки 2</p>
-        </div>
-        <div class="card">
-            <h1 class="card-title">Карточка 3</h1>
-            <p>Содержимое карточки 3</p>
-        </div>
-        <div class="card">
-            <h1 class="card-title">Карточка 4</h1>
-            <p>Содержимое карточки 4</p>
-        </div>
-        <div class="card">
-            <h1 class="card-title">Карточка 5</h1>
-            <p>Содержимое карточки 5</p>
-        </div>
-        </div>
-    </article>
-    
+    <main class="card-container">
+        <article class="card-row">
+            <section class="card">
+                <h2 class="card-title">Карточка 1</h2>
+                <p>Содержимое карточки 1</p>
+            </section>
+            <section class="card">
+                <h2 class="card-title">Карточка 2</h2>
+                <p>Содержимое карточки 2</p>
+            </section>
+            <section class="card">
+                <h2 class="card-title">Карточка 3</h2>
+                <p>Содержимое карточки 3</p>
+            </section>
+            <section class="card">
+                <h2 class="card-title">Карточка 4</h2>
+                <p>Содержимое карточки 4</p>
+            </section>
+            <section class="card">
+                <h2 class="card-title">Карточка 5</h2>
+                <p>Содержимое карточки 5</p>
+            </section>
+        </article>
+    </main>
 </body>
 </html>
