Update Task_01 bem/scss

--- a/Task_01_HTML_CSS/bem-scss/index.html
+++ b/Task_01_HTML_CSS/bem-scss/index.html
@@ -10,7 +10,6 @@
     <main class="container">
         <article class="top">
             <h1>ABOUT</h1>
-            <hr>
             <p>
                 Exercitation ea sit velit Lorem magna proident incididunt. Ex incididunt deserunt 
                 elit ea. Dolore mollit laboris reprehenderit nostrud commodo. Id reprehenderit minim 
@@ -19,7 +18,7 @@
         </article>
         <article class="card">
             <section class="card__item">
-                <div class="card__img__container">
+                <div class="card__img-container">
                     <img src="../assets/icons/window.svg" alt="window" class="card__image"/>
                 </div>
                 <h2 class="card__title">WEB</h2>
@@ -29,9 +28,11 @@
                 </p>
             </section>
             <section class="card__item">
-                <div class="card__img__container">
+                <div class="line line-left"></div>
+                <div class="card__img-container ">
                     <img src="../assets/icons/phone.svg" alt="phone" class="card__image"/>
                 </div>
+                <div class="line line-right"></div>
                 <h2 class="card__title">IOS AND ANDROID</h2>
                 <p class="card__text">
                     Commodo ea voluptate dolor ut minim. Id reprehenderit minim sit voluptate excepteur 
@@ -39,7 +40,7 @@
                 </p>
             </section>
             <section class="card__item">
-                <div class="card__img__container">
+                <div class="card__img-container">
                     <img src="../assets/icons/goal.svg" alt="goal" class="card__image"/>
                 </div>
                 <h2 class="card__title">MARKETING</h2>
