--- a/Task_02_JavaScript/search_and_filter/search.html
+++ b/Task_02_JavaScript/search_and_filter/search.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Form</title>
+    <title>Search and filter</title>
     <link rel="stylesheet" href="./css/style.css">
     <script src="./search.js" defer></script>
 </head>
