Task_02 search and filter some fixes

--- a/Task_02_JavaScript/search_and_filter/search.html
+++ b/Task_02_JavaScript/search_and_filter/search.html
@@ -12,6 +12,7 @@
         <p class="filter__header">Filterable list</p>
         <input type="text" id="input" class="filter__input" placeholder="Search..."> 
         <ul id="list" class="filter__list">
+            <li id="no">Nothing was found</li>
             <li>Item 1 Alex</li>
             <li>Item 2 Olga</li>
             <li>Item 3</li>
