--- a/Task_02_JavaScript/converter/converter.html
+++ b/Task_02_JavaScript/converter/converter.html
@@ -15,6 +15,7 @@
             <p>Update every 15 minutes</p>
         </div>
         <h3 class="converter__header">Currency</h3>
+        <p class="converter__loader" id="loader">Loading...</p>
         <div class="converter__currencies">
             <ul id="list" class="converter__currencies-list"></ul>
             <img src="../assets/images/wallet.png"/>
